--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@
 ========================================*/
 
 :root {
-  --main-bg-color: #fa8f52;
+  --main-bg-color: #FF8C19;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
