--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,13 @@ body {
   font-size: 15px;
 }
 
+font-face {
+  font-family: 'Mollen-Bold';
+  src: url('fonts/Mollen-Bold.otf'), format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
+
 p {
   margin: 0;
   padding: 0;
